--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://google/<DATABASE_NAME>?cloudSqlInstance=<CONNECTION_NAME>&socketFactory=com.google.cloud.sql.mysql.SocketFactory
+spring.datasource.url=jdbc:mysql://google/rapidapidb?cloudSqlInstance=turing-rush-402604:asia-south1:api-testing-db2&socketFactory=com.google.cloud.sql.mysql.SocketFactory
 spring.jpa.properties.hibernate.default_schema = public
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=avc@123
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
